--- a/src/App.css
+++ b/src/App.css
@@ -2,14 +2,14 @@
   text-align: center;
 }
 .App-header {
-  background-color: #282c34;
+  background-color: #282b31;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 5vmin);
-  color: white;
+  color: rgb(119, 145, 218);
 }
 
 .Board{
@@ -24,6 +24,21 @@
   width: 20vh;
 }
 
+.bottom, .bottom-right{
+  border-bottom: 6px solid blue;
+}
+.right, .bottom-right{
+  border-right: 6px solid blue;
+}
+
 .Value{
-  
+  align-items: center;
+  font-size: 80px;
+}
+
+.ValueX{
+  color: rgb(231, 131, 60);
+}
+.ValueO{
+  color: rgb(203, 231, 60);
 }
